@@ -1,13 +1,13 @@
 package school.sptech.service.venda;
 
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
+
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import school.sptech.controller.venda.dto.VendaRequestDto;
+
 import school.sptech.entity.funcionario.Funcionario;
 import school.sptech.entity.itemCarrinho.ItemCarrinho;
 import school.sptech.entity.venda.Venda;
@@ -15,14 +15,10 @@ import school.sptech.repository.funcionario.FuncionarioRepository;
 import school.sptech.repository.itemCarrinho.ItemCarrinhoRepository;
 import school.sptech.repository.venda.VendaRepository;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.when;
-import static org.mockito.ArgumentMatchers.any;
+import java.util.*;
 
-import java.time.LocalDate;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 public class VendaCriacaoTest {
@@ -39,88 +35,146 @@ public class VendaCriacaoTest {
     @Mock
     private VendaRepository vendaRepository;
 
-    // Objetos usados nos testes
     private Funcionario funcionarioMock;
-    private List<ItemCarrinho> itensMock;
-    private VendaRequestDto vendaRequestDto;
-    private Venda vendaMock;
+    private ItemCarrinho item1;
+    private ItemCarrinho item2;
 
-    // será executado antes dos testes para preparar os objetos
     @BeforeEach
-    void setup(){
-        // funcionário com ID 1
+    void setup() {
         funcionarioMock = new Funcionario();
         funcionarioMock.setId(1);
 
-        // item de carrinho com valor unitário
+        item1 = new ItemCarrinho();
+        item1.setId(1);
+        item1.setValorUnitario(10.0);
+
+        item2 = new ItemCarrinho();
+        item2.setId(2);
+        item2.setValorUnitario(5.0);
+    }
+
+    @Test
+    void deveCriarVendaComSucesso() {
+        Funcionario funcionario = new Funcionario();
+        funcionario.setId(1);
+
+        ItemCarrinho item1 = new ItemCarrinho();
+        item1.setId(10);
+        item1.setValorUnitario(50.0);
+
+        ItemCarrinho item2 = new ItemCarrinho();
+        item2.setId(20);
+        item2.setValorUnitario(30.0);
+
+        Venda venda = new Venda();
+        venda.setFuncionario(funcionario);
+        venda.setItensCarrinho(List.of(item1, item2));
+
+        when(funcionarioRepository.findById(1)).thenReturn(Optional.of(funcionario));
+        when(itemCarrinhoRepository.findAllById(List.of(10, 20))).thenReturn(List.of(item1, item2));
+        when(vendaRepository.save(any(Venda.class))).thenAnswer(invocation -> invocation.getArgument(0));
+
+        Venda vendaCriada = vendaService.criarVenda(venda);
+
+        assertNotNull(vendaCriada);
+        assertEquals(funcionario, vendaCriada.getFuncionario());
+        assertEquals(2, vendaCriada.getItensCarrinho().size());
+        assertEquals(80.0, vendaCriada.getValorTotal());
+        verify(vendaRepository, times(1)).save(vendaCriada);
+    }
+
+    @Test
+    void deveLancarExcecaoQuandoFuncionarioNaoEncontrado() {
+        Venda venda = new Venda();
+        Funcionario funcionario = new Funcionario();
+        funcionario.setId(999);
+        venda.setFuncionario(funcionario);
+        venda.setItensCarrinho(List.of(new ItemCarrinho()));
+
+        when(funcionarioRepository.findById(999)).thenReturn(Optional.empty());
+
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> vendaService.criarVenda(venda));
+        assertEquals("Funcionário não encontrado.", exception.getMessage());
+    }
+
+    @Test
+    void deveLancarExcecaoQuandoItensCarrinhoNulos() {
+        Funcionario funcionario = new Funcionario();
+        funcionario.setId(1);
+
+        Venda venda = new Venda();
+        venda.setFuncionario(funcionario);
+        venda.setItensCarrinho(null);  // itens nulos
+
+        when(funcionarioRepository.findById(1)).thenReturn(Optional.of(funcionario));  // mock do funcionário válido
+
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> vendaService.criarVenda(venda));
+        assertEquals("Itens da venda não encontrados.", exception.getMessage());
+    }
+
+    @Test
+    void deveLancarExcecaoQuandoItensCarrinhoVazios() {
+        Funcionario funcionario = new Funcionario();
+        funcionario.setId(1);
+
+        Venda venda = new Venda();
+        venda.setFuncionario(funcionario);
+        venda.setItensCarrinho(List.of());  // carrinho vazio
+
+        when(funcionarioRepository.findById(1)).thenReturn(Optional.of(funcionario));  // retorna funcionário válido
+
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> vendaService.criarVenda(venda));
+        assertEquals("Itens da venda não encontrados.", exception.getMessage());
+    }
+
+    @Test
+    void deveLancarExcecaoQuandoNenhumItemValidoEncontrado() {
+        Funcionario funcionario = new Funcionario();
+        funcionario.setId(1);
+
         ItemCarrinho item = new ItemCarrinho();
-        item.setId(1);
-        item.setValorUnitario(10.0);
+        item.setId(5);
 
-        itensMock = Arrays.asList(item, item); //adicionando dois itens IGUAIS!!!
+        Venda venda = new Venda();
+        venda.setFuncionario(funcionario);
+        venda.setItensCarrinho(List.of(item));
 
-        vendaRequestDto = new VendaRequestDto();
-        vendaRequestDto.setFuncionarioId(1);
-        vendaRequestDto.setItens(Arrays.asList(1, 1));
+        when(funcionarioRepository.findById(1)).thenReturn(Optional.of(funcionario));
+        when(itemCarrinhoRepository.findAllById(List.of(5))).thenReturn(List.of()); // nenhum item encontrado
 
-        // venda retornada após salvar
-        vendaMock = new Venda();
-        vendaMock.setId(1);
-        vendaMock.setFuncionario(funcionarioMock);
-        vendaMock.setItensCarrinho(itensMock);
-        vendaMock.setDataVenda(LocalDate.now());
-        vendaMock.setValorTotal(20.0);
-        }
-
-        // CRIANDO VENDA COM DADOS VÁLIDOS
-        @Test
-        @DisplayName("Criar venda quando acionado com dados válidos deve retornar venda persistida")
-        void criarVendaQuandoAcionadoComDadosValidosDeveRetornarResumoCorreto() {
-            when(funcionarioRepository.findById(1)).thenReturn(Optional.of(funcionarioMock));
-            when(itemCarrinhoRepository.findAllById(Arrays.asList(1, 1))).thenReturn(itensMock);
-            when(vendaRepository.save(any(Venda.class))).thenReturn(vendaMock); //USADO PARA VALIDAR O TIPO
-
-            Venda venda = vendaService.criarVenda(vendaRequestDto);
-
-            // Verifica se a venda retornada não é nula
-            assertNotNull(venda);
-
-            // Verifica se o valor total está correto
-            assertEquals(20.0, venda.getValorTotal());
-
-            // Verifica se foram incluídos os 2 itens no carrinho
-            assertEquals(2, venda.getItensCarrinho().size());
-
-            // Verifica se o funcionário associado está correto
-            assertEquals(funcionarioMock, venda.getFuncionario());
-        }
-
-    //ERRO AO CRIAR A VENDA COM FUNCIONÁRIO INEXISTENTE
-    @Test
-    @DisplayName("Criar venda quando acionado com funcionário inexistente deve lançar exceção")
-    void criarVendaQuandoAcionadoComProdutosNormaisDeveRetornarResumoCorreto() {
-        when(funcionarioRepository.findById(1)).thenReturn(Optional.empty());
-
-        RuntimeException ex = assertThrows(RuntimeException.class,
-                () -> vendaService.criarVenda(vendaRequestDto));
-
-        assertEquals("Funcionário não encontrado", ex.getMessage());
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> vendaService.criarVenda(venda));
+        assertEquals("Nenhum item válido encontrado para os IDs informados.", exception.getMessage());
     }
 
-    // ERRO AO CRIAR VENDA COM ITENS INEXISTENTES
     @Test
-    @DisplayName("Criar venda quando acionado com itens inexistentes deve lançar exceção")
-    void criarVendaQuandoAcionadoComProdutosVendidosDeveRetornarResumoCorreto() {
-        when(funcionarioRepository.findById(1)).thenReturn(Optional.of(funcionarioMock));
+    void deveCalcularValorTotalCorreto() {
+        Funcionario funcionario = new Funcionario();
+        funcionario.setId(1);
 
-        // Simula que nenhum item de carrinho foi encontrado
-        when(itemCarrinhoRepository.findAllById(Arrays.asList(1, 1))).thenReturn(List.of());
+        ItemCarrinho item1 = new ItemCarrinho();
+        item1.setId(10);
+        item1.setValorUnitario(15.0);
 
-        RuntimeException ex = assertThrows(RuntimeException.class,
-                () -> vendaService.criarVenda(vendaRequestDto));
+        ItemCarrinho item2 = new ItemCarrinho();
+        item2.setId(20);
+        item2.setValorUnitario(25.0);
 
-        assertEquals("Itens não encontrados", ex.getMessage());
+        ItemCarrinho item3 = new ItemCarrinho();
+        item3.setId(30);
+        item3.setValorUnitario(10.0);
+
+        Venda venda = new Venda();
+        venda.setFuncionario(funcionario);
+        venda.setItensCarrinho(List.of(item1, item2, item3));
+
+        when(funcionarioRepository.findById(1)).thenReturn(Optional.of(funcionario));
+        when(itemCarrinhoRepository.findAllById(List.of(10, 20, 30))).thenReturn(List.of(item1, item2, item3));
+        when(vendaRepository.save(any(Venda.class))).thenAnswer(invocation -> invocation.getArgument(0));
+
+        Venda vendaCriada = vendaService.criarVenda(venda);
+
+        assertEquals(50.0, vendaCriada.getValorTotal());
     }
-
 }
+
 
